--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text);
+
 body {
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: 'Crimson Text', serif;
   background-color: #EEE;
   background-attachment: fixed;
  
@@ -16,24 +19,36 @@ body {
 }
  
 .container {
-  width: 85%;
+  width: 60%;
   margin: 0 auto;
   min-height: 100%;
   background: white;
+  border: 1px solid #eee inset;
+  box-shadow: 0 1px 35px rgba(0,0,0,0.1);
 }
  
 header {
-  background: #de4f4f;
+  background: rgb(239, 83, 88);
   padding: 20px 15px 15px 15px;
   position: relative;
   color: #FFF;
 }
- 
+
 #login-buttons {
-  display: block;
+  float: right;
 }
- 
+
+#login-buttons .login-close-text {
+  float: right;
+}
+
+#login-dropdown-list {
+  right: 0;
+  left: inherit;
+}
+
 h1 {
+  font-family: 'Lato';
   font-size: 1.5em;
   margin: 0;
   margin-bottom: 10px;
@@ -50,18 +65,23 @@ form {
 
 .new-post input {
   box-sizing: border-box;
-  padding: 10px 0;
-  background: transparent;
-  border: none;
-  width: 100%;
-  padding-right: 80px;
+  margin: 10px;
+  padding: 10px;
+  background: #FFF;
+  border: 1px solid #828282;
+  border-radius: 5px;
   font-size: 1em;
   text-align: left;
-  color: inherit;
+  color: #828282;
 }
- 
+
+.new-post input[type="text"] {
+  width: 35%;
+  min-width: 200px;
+}
+
 .new-post input:focus{
-  outline: 0;
+  outline: blue;
 }
  
 ol {
@@ -75,8 +95,10 @@ ol {
   font-weight: bold;
   background: none;
   font-size: 1em;
+  color: #828282;
   border: none;
   position: relative;
+  cursor: pointer;
 }
  
 li {
@@ -88,25 +110,50 @@ li {
   color: #828282;
 }
 
+.postWrap {
+  display: inline-block;
+  vertical-align: -100%;
+}
+
+.postUrl a {
+  color: #000;
+  text-decoration: none;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.3em;
+}
+
+.postUrl a:visited {
+  color: #828282;
+}
+
 .postDetails {
-  position: relative;
-  left: 18pt;
-  font-size: 8pt;
+  font-size: 1em;
 }
 
 .vote {
-  font-weight: bold;
-  color: black;
+  padding-right: 6px;
+}
+
+.vote path{
   cursor: pointer;
 }
 
-@media (max-width: 600px) {
+.upvote.checked {
+  fill: rgb(59, 210, 61);
+}
+
+.downvote.checked {
+  fill: rgb(246, 80, 88);
+}
+
+@media (max-width: 990px) {
   li {
     padding: 12px 15px;
   }
  
-  .new-post input {
+  .new-post input, .new-post input[type="text"] {
     padding-bottom: 5px;
+    width: 100%;
   }
   
   .container {
