--- a/client/main.css
+++ b/client/main.css
@@ -3,10 +3,11 @@
 
 body {
   font-family: 'Crimson Text', serif;
-  background-color: #EEE;
+  background-color: #eee;
   background-attachment: fixed;
- 
-  position: absolute;
+  background: linear-gradient(45deg, #eee 25%, transparent 0, transparent 75%, #ddd 0), linear-gradient(45deg, #ddd 25%, transparent 0, transparent 75%, #eee 0), linear-gradient(-45deg, #ddd 17%, #eee 0, #eee 25%, #ddd 0, #ddd 36%, #eee 0, #eee 64%, #ddd 0, #ddd 75%, #eee 0, #eee 83%, #ddd 0);
+  background-position: 0 0, 29px 29px;
+  background-size: 58px 58px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -16,6 +17,10 @@ body {
   margin: 0;
  
   font-size: 1em;
+}
+
+ul, ol {
+  padding: 0;
 }
  
 .container {
@@ -28,7 +33,8 @@ body {
 }
  
 header {
-  background: rgb(239, 83, 88);
+  background-color: rgb(239, 83, 88);
+  background: linear-gradient(rgb(239, 83, 88), rgb(200, 50, 60));
   padding: 20px 15px 15px 15px;
   position: relative;
   color: #FFF;
@@ -55,15 +61,26 @@ h1 {
   display: inline-block;
   margin-right: 1em;
 }
- 
-form {
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: -10px;
-  position: relative;
+
+a {
+  color: #000;
+  text-decoration: none;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.3em;
 }
 
-.new-post input {
+header a {
+  color: #fff;
+}
+
+form {
+  padding: 10px;
+  margin: 0 10px;
+  position: relative;
+  border-bottom: 1px solid #eee;
+}
+
+form input, form textarea {
   box-sizing: border-box;
   margin: 10px;
   padding: 10px;
@@ -73,21 +90,31 @@ form {
   font-size: 1em;
   text-align: left;
   color: #828282;
+  box-shadow: 0 1px 10px rgba(0,0,0,0.1);
 }
 
-.new-post input[type="text"] {
+form textarea {
+  color: #000;
+}
+
+form input[type="text"], form textarea {
   width: 35%;
   min-width: 200px;
 }
 
-.new-post input:focus{
-  outline: blue;
+form input[type="submit"] {
+  vertical-align: top;
+  cursor: pointer;
+  transition: all 0.1s linear;
 }
- 
-ol {
-  margin: 0;
-  padding: 10px;
-  background: white;
+
+form input[type="submit"]:hover {
+  color: #fff;
+  background-color: #828282;
+}
+
+form input:focus{
+  box-shadow: 0 1px 10px rgba(0,0,0,0.2);
 }
  
 .delete {
@@ -100,14 +127,42 @@ ol {
   position: relative;
   cursor: pointer;
 }
+
+.posts > ol {
+  margin: 0;
+  padding: 10px;
+  background: white;
+}
  
-li {
+.posts > li {
   list-style-type: decimal;
   list-style-position: inside;
-  position: relative;
   padding: 15px;
   border-bottom: #eee solid 1px;
   color: #828282;
+}
+
+.comments {
+  margin: 0;
+  padding: 10px;
+}
+
+.comments > li {
+  margin: 15px 30px;
+  border-bottom: #eee solid 1px;
+}
+
+.comments p {
+  margin: 0;
+}
+
+.comment-text {
+  font-family: 'Lato';
+}
+
+.comment-details {
+  color: #828282;
+  font-size: smaller;
 }
 
 .postWrap {
@@ -115,11 +170,10 @@ li {
   vertical-align: -100%;
 }
 
-.postUrl a {
-  color: #000;
-  text-decoration: none;
-  font-family: 'Lato', sans-serif;
-  font-size: 1.3em;
+.postDetails a {
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
 }
 
 .postUrl a:visited {
@@ -127,6 +181,7 @@ li {
 }
 
 .postDetails {
+  color: #828282;
   font-size: 1em;
 }
 
@@ -145,6 +200,12 @@ li {
 .downvote.checked {
   fill: rgb(246, 80, 88);
 }
+
+.show-post {
+  padding: 20px;
+}
+
+
 
 @media (max-width: 990px) {
   li {
